typescript/checker/tests/conformance/es6/modules/exportAndImport-es5-amd.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            105,
        ),
        hi: BytePos(
            127,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/es6/modules",
    src: Atom('./m1' type=inline),
}
 --> $DIR/tests/conformance/es6/modules/exportAndImport-es5-amd.ts:9:1
  |
9 | import f1 from "./m1";
  | ^^^^^^^^^^^^^^^^^^^^^^

